force-app/main/default/objects/Diab_Timesheet__c/Diab_Timesheet__c.object-meta.xml
<CustomObject>
    <label>Centuri Timesheet</label>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Timesheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centuri Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>