force-app/main/default/objects/Diab_Timesheet__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee for whom time is being entered for(This field was created for NPL MA)</description>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>