force-app/main/default/objects/Diab_Timesheet__c/fields/Employee_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Employee_Profit_Center__c</fullName>
    <description>This value is derived from Employee&apos;s Profit Centre(This field was created for NPL MA)</description>
    <formula>Employee__r.Profit_Center__r.Name</formula>
    <label>Employee Profit Center</label>
    <type>Text</type>
</CustomField>