force-app/main/default/objects/Diab_Timesheet__c/fields/LockoutDateTime__c.field-meta.xml
<CustomField>
    <fullName>LockoutDateTime__c</fullName>
    <description>Value is derived from Lock out time table using the  WeekEnding Date(This field was created for NPL MA).</description>
    <label>LockoutDateTime</label>
    <type>DateTime</type>
</CustomField>