force-app/main/default/objects/Diab_Timesheet__c/fields/WeekEnding_Date__c.field-meta.xml
<CustomField>
    <fullName>WeekEnding_Date__c</fullName>
    <description>Week Ending date is set to the upcoming Sunday of the current week(This field was created for NPL MA).</description>
    <formula>CASE(
MOD((WorkDate__c)- DATE(1900, 1, 7), 7),
0, WorkDate__c+7,
1, WorkDate__c+6,
2, WorkDate__c+5,
3, WorkDate__c+4,
4, WorkDate__c+3,
5, WorkDate__c+2,
6, WorkDate__c+1,
WorkDate__c
)</formula>
    <label>WeekEnding Date</label>
    <type>Date</type>
</CustomField>