force-app/main/default/objects/Diab_Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Employee__c</columns>
    <columns>LockoutDateTime__c</columns>
    <columns>Default_LockoutDate_Time__c</columns>
    <columns>WeekEnding_Date__c</columns>
    <columns>WorkDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>