force-app/main/default/objects/Diab_Timesheet__c/listViews/Payrole_Admin_Diab_Timesheet.listView-meta.xml
<ListView>
    <fullName>Payrole_Admin_Diab_Timesheet</fullName>
    <filterScope>Queue</filterScope>
    <label>Payrole Admin</label>
    <queue>Payrole_Admin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>